@@ -33,9 +33,7 @@ stop <- function(..., call. = TRUE, domain = NULL)
 
 stopifnot <- function(...)
 {
-    n <- length(ll <- list(...))
-    if(n == 0L)
-	return(invisible())
+    cl <- match.call()[-1L]
     Dparse <- function(call, cutoff = 60L) {
 	ch <- deparse(call, width.cutoff = cutoff)
 	if(length(ch) > 1L) paste(ch[1L], "....") else ch
@@ -44,10 +42,15 @@ stopifnot <- function(...)
 	x[seq_len(if(n < 0L) max(length(x) + n, 0L) else min(n, length(x)))]
     abbrev <- function(ae, n = 3L)
 	paste(c(head(ae, n), if(length(ae) > n) "...."), collapse="\n  ")
-    mc <- match.call()
-    for(i in 1L:n)
-	if(!(is.logical(r <- ll[[i]]) && !anyNA(r) && all(r))) {
-	    cl.i <- mc[[i+1L]]
+    ## benv <- baseenv()
+    for (i in seq_along(cl)) {
+	cl.i <- cl[[i]]
+	## r <- eval(cl.i, ..)   # with correct warn/err messages:
+	r <- withCallingHandlers(
+		tryCatch(...elt(i),
+			 error = function(e) { e$call <- cl.i; stop(e) }),
+		warning = function(w) { w$call <- cl.i; w })
+	if (!(is.logical(r) && !anyNA(r) && all(r))) {
 	    msg <- ## special case for decently written 'all.equal(*)':
 		if(is.call(cl.i) && identical(cl.i[[1]], quote(all.equal)) &&
 		   (is.null(ni <- names(cl.i)) || length(cl.i) == 3L ||
@@ -64,6 +67,7 @@ stopifnot <- function(...)
 
 	    stop(msg, call. = FALSE, domain = NA)
 	}
+    }
     invisible()
 }
 
